...
    <string name="yes_discard">Yes, discard</string>
    <string name="no_go_back">No, go back</string>
    <string name="clear_all">Clear all</string>
    <string name="prescribed_successfully">Prescribed successfully</string>
    <string name="re_prescribed_successfully">Re-prescribed successfully</string>
    <string name="prescribe">Prescribe</string>
    <string name="fill_details">Fill details</string>
    <string name="done">Done</string>
    <string name="active_ingredient">Active ingredient</string>
    <string name="formulations">Formulations</string>
    <string name="qty_per_dose">Qty per dose</string>
    <string name="ml">ml</string>
    <string name="dose_per_day">dose per day</string>
...
    <string name="household_members">Household members</string>
    <string name="add_member">Add member</string>
    <string name="edit_existing">Edit existing</string>

    <string name="logout_dialog_title">Confirm logout</string>
    <string name="logout_dialog_description">Are you sure you want to logout</string>
    <string name="logout_btn">Logout</string>

    <string name="name_label">Name</string>
    <string name="role_label">Role</string>
    <string name="phone_number_label">Phone No.</string>
    <string name="advanced_search">Advanced Search</string>
    <string name="search">Search</string>
...
